ajustado, rotas, services, controllers e validates de partidas
