# src/validates/partida.js
@@ -13,19 +13,19 @@ const observacaoType = [
 const validateNewPartida = (partidaData) => {
     const errors = [];
 
-    if (!partidaData.mapa) {
+    if (!partidaData.mapa_id) {
         errors.push('O código do mapa é obrigatório');
     } 
 
-    if (!partidaData.camp) {
+    if (!partidaData.camp_id) {
         errors.push('O código do campeonato é obrigatório');
     }
 
-    if (!partidaData.time1) {
+    if (!partidaData.time_id_1) {
         errors.push('O código do time 1 é obrigatório');
     }
 
-    if (!partidaData.time2) {
+    if (!partidaData.time_id_2) {
         errors.push('O código do time 2 é obrigatório');
     }
 
@@ -33,16 +33,16 @@ const validateNewPartida = (partidaData) => {
         errors.push('A duração da partida é obrigatória');
     }
 
-    if (!partidaData.dataPartida) {
+    if (!partidaData.data_da_partida) {
         errors.push('A data da partida é obrigatória');
     }
 
-    if (!partidaData.roundsTime1) {
-        errors.push('A quantidade de rounds do time 1 é obrigatória');
+    if (partidaData.rounds_time_1 == null) {
+        errors.push('Os rounds do time 1 são obrigatórios');
     }
 
-    if (!partidaData.roundsTime2) {
-        errors.push('A quantidade de rounds do time 2 é obrigatória');
+    if (partidaData.rounds_time_2 == null) {
+        errors.push('Os rounds do time 2 são obrigatórios');
     }
 
     if (!partidaData.observacao) {
